app/assets/stylesheets/autocomplete.css.scss
/*******************************************************
  TEMP CODE USED BETWEEN HR MENU AND EMPLOYEE DB RELEASE
  TODO: REMOVE AFTER EMPLOYEE DB RELEASE
*******************************************************/

// Autocomplete list for user search
ul.ui-autocomplete.search_colleagues,
ul.ui-autocomplete.search_users {
  max-height: 30em;
  overflow-y: auto;
  overflow-x: hidden;
  .ui-menu-item > a.ui-corner-all {
    padding: .5em 1em .7em .5em;
    clear: left;
    overflow: hidden;
    white-space: nowrap;
    font-size: 13px;
    img {
      float: left;
      height: 32px;
      width: 32px;
    }
    p {
      margin: 0 0 0 38px;
    }
  }
}

body.user.edit .box.show {
  a.btn {
    float: right;
  }
}

/*******************************************************
  END
*******************************************************/



/* jQuery UI Autocomplete. CSS is not theme rolled */
.ui-autocomplete {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000;
  float: left;
  display: none;
  min-width: 100px;
  padding: 0;
  margin: 0;
  list-style: none;
  background: #fff;
  @include box-shadow(2px 2px 10px rgba(0, 0, 0, .5));
  border: $border;
  @include radius(0 0 3px 3px);

  .ui-menu-item > a.ui-corner-all {
    display: block;
    padding: .2em .5em;
    font-family: $sansSerif;
    font-size: emize(13);
    clear: both;
    white-space: nowrap;
    color: #000;
  }

  .ui-state-focus {
    background: $backgroundDark;
    color: white !important;
    cursor: pointer;
  }
}

/* jQuery UI helpers */
.ui-helper-hidden{display:none}.ui-helper-hidden-accessible{position:absolute!important;clip:rect(1px);clip:rect(1px,1px,1px,1px)}.ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}.ui-helper-clearfix:before,.ui-helper-clearfix:after{content:"";display:table}.ui-helper-clearfix:after{clear:both}.ui-helper-clearfix{zoom:1}.ui-helper-zfix{width:100%;height:100%;top:0;left:0;position:absolute;opacity:0;filter:Alpha(Opacity=0)}.ui-state-disabled{cursor:default!important}.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat}.ui-widget-overlay{position:absolute;top:0;left:0;width:100%;height:100%}

